# corrupt_mnist

./: .gitignore  README.md  cloudbuild.yaml  config.yaml  evaluate.dockerfile  model.ckpt  model.pth  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
app/: main.py
configs/: sweep.yaml  train_conf.yaml
data/: processed.dvc
dockerfiles/: Dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
lightning_logs/version_0/: events.out.tfevents.1736694287.William-pc.19284.0
lightning_logs/version_1/: events.out.tfevents.1736694407.William-pc.23636.0
models/: model.pth
src/my_project/: data.py  evaluate.py  lightning_model.py  lightning_train.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
tests/integrationtests/: test_apis.py
wandb/run-20250109_195148-1gx52ugd/: run-1gx52ugd.wandb
wandb/run-20250109_200350-81o5webd/: run-81o5webd.wandb
wandb/run-20250109_200755-tjrhm2z5/: run-tjrhm2z5.wandb
wandb/run-20250109_203155-flup43lp/: run-flup43lp.wandb
wandb/run-20250109_203441-vhvafnl5/: run-vhvafnl5.wandb
wandb/run-20250109_204054-ep9h9bvu/: run-ep9h9bvu.wandb
wandb/run-20250112_162929-exob2en2/: run-exob2en2.wandb
wandb/run-20250112_163223-zo1b7mro/: run-zo1b7mro.wandb
wandb/run-20250112_164528-5wquvtyt/: run-5wquvtyt.wandb
wandb/run-20250118_221214-ulo5qsrv/: run-ulo5qsrv.wandb
wandb/sweep-k1v7fufh/: config-faws0lds.yaml  config-rorhoc64.yaml  config-vl3991gi.yaml
(+35 files in other folders)
