[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.0.1"
description = "personal project in ML Ops"
authors = [
  { name = "WilliamKA02", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "my_project.train:main"
evaluate = "my_project.evaluate:main"
iris_classifier = "my_project.iris_classifier:app"
lightning_train = "my_project.lightning_train:main"
lightning_evaluate = "my_project.lightning_evaluate:main"
